--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,12 @@
-<div class="row">
-    <div class="col s12 m7" id="articles">
-		<!-- Card berisi artikel akan disisipkan ke dalam sini. -->
-    </div>
+<div class="row white-text">
+  <div class="card-content center">
+    <h4 > </h4>
+    <img src="images/podium.png" width="20%">
+  </div>
+  <div class="card-tabs ">
+    <ul class="tabs tabs-fixed-width  tabs-transparent" id="tabs">
+    </ul>
+  </div>
+  <div class="card-content  blue-grey darken-1" id="type">
+  </div>
 </div>
