--- a/pages/teams.html
+++ b/pages/teams.html
@@ -1,6 +1,9 @@
-<div class="row">
-    <h2>INI TEAMS</h2>
-    <div class="col s12 m7" id="teams">
-		<!-- Card berisi artikel akan disisipkan ke dalam sini. -->
+    <br>
+    <h3 class="center white-text">TEAMS</h3>
+    <br>
+    <hr>
+    <br>
+    <div class="row" id="teams">
+
+
     </div>
-</div>
