Online Mode No Error

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,3 +10,8 @@
   <div class="card-content  blue-grey darken-1" id="type">
   </div>
 </div>
+<script>
+          // Sisipkan komponen card ke dalam elemen dengan id #content
+          var el = document.querySelector('.tabs');
+          var instance = M.Tabs.init(el, {});
+</script>
