--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel = "stylesheet" href = "css/materialize.min.css">
     <script type = "text/javascript" src = "js/jquery-2.1.1.min.js"></script>           
     <script src = "js/materialize.min.js"></script> 
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body class=" blue-grey darken-1">
     <!-- Navigasi -->
@@ -27,22 +28,6 @@
     <script src="js/idb.js"></script>
     <script src="js/db.js"></script>
 
-    <script>
-      // REGISTER SERVICE WORKER
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function() {
-          navigator.serviceWorker
-            .register("/service-worker.js")
-            .then(function() {
-              console.log("Pendaftaran ServiceWorker berhasil");
-            })
-            .catch(function() {
-              console.log("Pendaftaran ServiceWorker gagal");
-            });
-        });
-      } else {
-        console.log("ServiceWorker belum didukung browser ini.");
-      }
-    </script>
+    <script src="cek-worker.js"></script>
   </body>
 </html>
