Implementasi offline mode dengan Workbox

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>LILIGAAN</title>
     <meta name="description" content="Liligaan" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#607D8B">
     <link rel = "stylesheet" href = "css/materialize.min.css">
+    <link rel="apple-touch-icon" href="/icon-apple.png">
     <script type = "text/javascript" src = "js/jquery-2.1.1.min.js"></script>           
     <script src = "js/materialize.min.js"></script> 
     <link rel="manifest" href="/manifest.json">
