--- a/team.html
+++ b/team.html
@@ -69,6 +69,7 @@
           item.then(function(team) {
             saveForLater(team);
           });
+          M.toast({html: 'Tim ditambahkan ke favourite'});
         };
 
       });
